--- a/package.json
+++ b/package.json
@@ -6,12 +6,19 @@
   "main": "",
   "scripts": {
     "start": "superstatic",
-    "test": "eslint '**/*.js' && ./node_modules/karma/bin/karma start --single-run"
+    "test": "eslint '**/*.js' && ./node_modules/karma/bin/karma start --single-run",
+    "format": "prettier-eslint --write {,**/}*.js"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
     "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-node": "^8.0.1",
+    "jest": "^24.7.1",
+    "prettier-eslint": "^8.8.2",
+    "prettier-eslint-cli": "^4.7.1",
     "jasmine-core": "latest",
     "karma": "latest",
     "karma-chrome-launcher": "latest",
