lots of code quality improvements

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,25 +1,37 @@
 {
   "env": {
-      "browser": true,
-      "commonjs": true,
-      "jest": true,
-      "es6": true,
-      "jquery": true
+    "browser": true,
+    "commonjs": true,
+    "jest": true,
+    "es6": true,
+    "jquery": true
   },
   "extends": "airbnb-base",
   "globals": {
-      "Atomics": "readonly",
-      "SharedArrayBuffer": "readonly"
+    "Atomics": "readonly",
+    "SharedArrayBuffer": "readonly"
   },
   "parserOptions": {
-      "ecmaVersion": 2018
+    "ecmaVersion": 2018
   },
   "rules": {
-      "indent": ["error", 4],
-      "object-property-newline": "off",
-      "func-names": "off",
-      "no-console": "off",
-      "object-curly-newline": ["error", {"multiline": true, "minProperties": 5}],
-      "no-continue": "off"
+    "indent": [
+      "error",
+      4
+    ],
+    "object-property-newline": "off",
+    "func-names": "off",
+    "no-console": "off",
+    "object-curly-newline": [
+      "error",
+      {
+        "multiline": true,
+        "minProperties": 5
+      }
+    ],
+    "no-continue": "off",
+    "camelcase": "off",
+    "no-param-reassign": "off",
+    "max-len": "off"
   }
 }
